impliment slider and tweak style slightly
slider controls all channels of the SoundManager's mixer volume. Also cleans up the UI to match Singularity's theme.

Unfortunately, the canvas has to consume less space to fit the slider on the screen (80% instead of 90%)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "docwriter.style": "JSDoc",
     "cSpell.words": [
+        "padx",
+        "pady",
         "Progressor",
         "pygame"
     ]
