--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "cSpell.words": [
         "Progressor",
         "pygame"
+    ],
+    "python.analysis.extraPaths": [
+        "./py_src"
     ]
 }
