impliment full .cfg loader
program can now dynamically load any variable from the Singularity.cfg if the line is formatted properly.

All configs from the Singularity.py have been deleted and are dynamically created at runtime by the Configurator

NOTE: you will need to manually move a copy of Singularity.cfg to lay next to the executible

--- a/Singularity.cfg
+++ b/Singularity.cfg
@@ -1,3 +1,21 @@
-Hello:A
-World:B
-UseBinaryBG:False
+UseBinaryBG:bool=True # disable this if performance is poor
+ClickCost:int=25 # how much energy to deduct for certain actions # <= StartingMaxEnergy
+StartingViruses:int=5 # the number of viruses in play # <= 26
+StartingHealth:int=10 # the starting amount of health
+ProblemLength:int=6 # the length of prompts in characters
+ScrubLength:int=5000 # the number of ms a scrub takes
+StartingEnergy:int=0 # >=0
+StartingMaxEnergy:int=100
+PlayerSize:int=20 #the width of the player's cursor
+EnergyRate:int=100 # the number of ms after which 1 energy is awarded
+MaxEnergyRate:int=5000
+MaxEnergyCap:int=200
+JitterRate:int=200
+CanvasWidth:int=1000
+CanvasHeight:int=700
+ProblemType:str="String" # Prompts or String
+DebugMode:bool=False
+PrevScansShow:bool=False
+MaxEnergy:int=100
+CanvasWidth:int=1000
+CanvasHeight:int=1000
